--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
-  </head>
 
-  <body>
-    <form class="search-form" id="search-form">
-      <input
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button type="submit">Search</button>
-    </form>
-    <div class="gallery">
-      <!-- Карточки изображений -->
-    </div>
-    <button type="button" class="load-more">Load more</button>
-    <script src="index.js" type="module"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Image search</title>
+  <link rel="stylesheet" href="./sass/index.scss" />
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+</head>
+
+<body>
+
+  <include src="./partials/preloader.html"></include>
+  <include src="./partials/search.html"></include>
+  <include src="./partials/gallery.html"></include>
+  <include src="./partials/buttons.html"></include>
+
+  <script type="module" src="./index.js"></script>
+</body>
+
 </html>
